objects/Case_Age_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Average_Case_Age_Days__c</fullName>
        <label>Average Case Age (Days)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cases__c</fullName>
        <label>Number of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Age Snapshot</label>
    <nameField>
        <displayFormat>CAS {0}</displayFormat>
        <label>Case Age Snap #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Age Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>